z-index mobile issues

--- a/static/css/record_viewer.css
+++ b/static/css/record_viewer.css
@@ -32,6 +32,7 @@
     width: 100%;
     height: 100%;
     transition: transform 2s;
+    z-index: -10;
 }
 
 #record_container:hover > #jacket_front {
@@ -57,7 +58,7 @@
     display: grid;
     grid-template-rows: auto 1fr; /* NEW */
     grid-template-columns: .5fr .5fr 1fr .5fr .5fr;
-    transition: transform 3s;
+    transition: transform 2s;
     transform-style: preserve-3d;
     margin-bottom: 5%;
     /* grid-row-start: 2;
@@ -87,14 +88,14 @@
     left: -.5vh;
     position: absolute;
     top: 0px;
-    border-style: solid;
-    border: 1px;
+    /* border-style: solid;
+    border: 1px; */
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     width: .5vh;
     z-index: -10;
-    transition: 3s;
+    transition: 2s;
     transform-origin: 100% 50%;
     transform: rotateY(-90deg);
     -webkit-transform: rotateY(-90deg);
